--- a/views/browse.html
+++ b/views/browse.html
@@ -13,17 +13,13 @@
  	      <input type="text" ng-model="searchTask" class="form-control" placeholder="Search">
  	    </div>
  	  </div>
- 	    <div class="title">
- 	      <a href="#/post" class="btn btn-warning">Post a Task</a>
- 	    </div>
- 	    <br>
 
  	    <!--Task List-->
  	    <a ng-repeat="task in tasks | filter: searchTask | orderBy: 'title'" ng-href="#/edit/{{task.$id}}">
  	      <div class="list-group-item">
  	           <div class="row-content">
  	               <h4 class="list-group-item-heading">{{task.title}}</h4>
- 	                 <span class="list-group-item-text">{{task.description | limitTo25}}{{task.description.length > 25? "..." : ""}} 
+ 	                 <span class="list-group-item-text">{{task.description}} <!-- | limitTo25}}{{task.description.length > 25? "..." : ""}} -->
  	                 </span>
  	           </div>
  	          <div class="payment">
